code refactoring; minor updates
- added test database to docker-compose.yml;
- added migrate command to docker-compose.yml;
- updated Swagger config of API docs;
- minor fixes.
